Fixed the menu issue. It was caused by having some whitespace among the menu items.

--- a/css/main.scss
+++ b/css/main.scss
@@ -123,7 +123,7 @@ body {
             top:0;
             left:0;
             height: $height;
-            width:800px;
+            width:600px;
             overflow: hidden;
 
             .scrolling {
